# fuaekt

./: .gitignore  CMakeLists.txt  README.md
shaders/: default.frag
source/: CMakeLists.txt  main.c  math.h
source/core/: core.c  core.h  error.c  error.h  logging.h
source/entities/: player.c  player.h
source/filesystem/: filesystem.c  filesystem.h
source/game/: gamestate.h
source/input/: input.c  input.h
source/map/: map.c  map.h  structs.h
source/material/: material.c  material.h  shader.c  shader.h
source/physics/: physics.c  physics.h
source/renderer/: renderer.c  renderer.h  window.c  window.h
source/utils/: math.c  math.h
